<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/update_product_margin"
        android:gravity="center"
        android:text="@string/update_product"
        android:textSize="@dimen/update_product_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUpdatedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/etUpdatedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/etUpdatedPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/enter_price"
        android:inputType="numberSigned" />

</LinearLayout>