<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/update_product_margin"
        android:gravity="center"
        android:text="@string/new_product_heading"
        android:textSize="@dimen/update_product_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/enter_title_new"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/date_new"
        android:inputType="date" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_marginStart"
        android:layout_marginEnd="@dimen/title_marginStart"
        android:layout_marginBottom="@dimen/title_marginStart"
        android:ems="10"
        android:hint="@string/price_new"
        android:inputType="numberSigned" />

</LinearLayout>