<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/product_item_design_mb_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardBackgroundColor="@color/card_backgroundColor"
        app:cardElevation="@dimen/card_elevation"
        android:layout_marginBottom="@dimen/card_elevation"
        >
        <LinearLayout
            android:padding="@dimen/ll_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="3"
                android:id="@+id/tvProductTitle"
                android:textColor="@color/white"
                android:text="@string/product_title_text"
                android:textSize="@dimen/product_title_text_size"
                android:textStyle="bold|italic"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="3"
                android:id="@+id/tvProductPrice"
                android:textColor="@color/white"
                android:text="@string/product_price_text"
                android:textSize="@dimen/product_title_text_size"
                android:textStyle="bold|italic"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2"
                android:id="@+id/tvProductDate"
                android:textColor="@color/black"
                android:text="@string/product_date_text"
                android:textSize="@dimen/product_title_text_size"
                android:textStyle="bold|italic"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/edit_icon"
                    android:padding="@dimen/iv_edit_padding"
                    android:id="@+id/ivEdit"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/delete_icon"
                    android:id="@+id/ivDelete"
                    android:padding="@dimen/iv_de_padding"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>